Fixed mobile nav menu. Updated broken styles

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -117,24 +117,23 @@ $navbar-height: 70px;
   overflow: hidden;
   transition: transform 450ms linear;
   z-index: 5;
-
-  &.open {
-    display: flex;
-    flex-direction: column;
-    opacity: 1;
-    transform: translateY(0);
-  }
+  background-color: rgba(0, 0, 0, 0.5);
 
   span.material-icons {
     color: white;
   }
 
   ul {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 0;
     width: 100%;
+    background-color: white;
+    min-height: 80vh;
+    border-top: 8px double $purple;
+    border-bottom: 8px double $purple;
 
     li {
       padding: clamp(5px, 5vh, 40px) 0;
@@ -150,17 +149,28 @@ $navbar-height: 70px;
       }
 
       a {
-        color: $white;
         font-size: clamp(24px, 4vw, 32px);
       }
     }
   }
 }
 
+.open {
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+  transform: translateY(0);
+}
+
 .navbar__nav__links_mobile__close {
   position: absolute;
   top: 1rem;
   right: 1rem;
+  background-color: $purple;
+  border-radius: 50%;
+  padding: 0.5rem;
+  color: $white;
+  border: 2px solid $white;
 
   > span {
     font-size: 1.75rem;
